--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-pdf": "^4.1.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
