--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-docs-viewer": "^1.0.1",
     "react-helmet": "^5.2.1",
-    "react-pdf": "^4.1.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
